Logic for starting flow based on the access token, implemented services for login, register, proxy details (in progress)

--- a/IPSX/Storyboard/Register.storyboard
+++ b/IPSX/Storyboard/Register.storyboard
@@ -87,7 +87,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="keyIcon" translatesAutoresizingMaskIntoConstraints="NO" id="YKW-Dt-Hzb">
-                                                <rect key="frame" x="0.0" y="7" width="29" height="33"/>
+                                                <rect key="frame" x="0.0" y="6" width="29" height="33"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type your password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="snQ-lA-6jD">
@@ -130,7 +130,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="keyIconCheck" translatesAutoresizingMaskIntoConstraints="NO" id="vzo-GD-mak">
-                                                <rect key="frame" x="0.0" y="6" width="29" height="33"/>
+                                                <rect key="frame" x="0.0" y="5" width="29" height="33"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                             </imageView>
                                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Retype your password" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="f03-6l-DM5">
@@ -216,7 +216,7 @@
                                     <color key="titleColor" red="0.80800002810000005" green="0.83137254901960778" blue="0.85490196078431369" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="NZC-Rz-rhn" kind="show" id="xjJ-3R-nSt"/>
+                                    <segue destination="NZC-Rz-rhn" kind="show" identifier="showRegistrationTermsSegueID" id="xjJ-3R-nSt"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -484,7 +484,7 @@
                                     <color key="titleColor" red="0.80800002810000005" green="0.83137254901960778" blue="0.85500001910000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <segue destination="R1q-eW-KM7" kind="show" id="yqy-tB-3Ld"/>
+                                    <action selector="registerButtonAction:" destination="NZC-Rz-rhn" eventType="touchUpInside" id="15g-dx-9Hq"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -512,6 +512,7 @@
                     <connections>
                         <outlet property="readWPLabel" destination="rR5-6h-BhI" id="kKQ-KW-dsy"/>
                         <outlet property="registerButton" destination="zJr-kv-cZI" id="MKM-zt-x9x"/>
+                        <segue destination="R1q-eW-KM7" kind="show" identifier="showRegConfirmationSegueID" id="AcT-LT-hvw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VVn-Vo-kvw" userLabel="First Responder" sceneMemberID="firstResponder"/>
