--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -411,6 +411,7 @@
                         <segue destination="6jc-WL-DqT" kind="relationship" relationship="viewControllers" id="lZb-l8-eDA"/>
                         <segue destination="f0C-Rr-AGY" kind="relationship" relationship="viewControllers" id="cu0-ty-GJw"/>
                         <segue destination="Eii-NL-efe" kind="relationship" relationship="viewControllers" id="Roy-su-mpx"/>
+                        <segue destination="grr-34-nBj" kind="show" identifier="showLandingSegueID" id="fyv-EH-KG9"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="USP-3f-e11" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -755,7 +756,7 @@
                 <viewControllerPlaceholder storyboardName="Landing" id="grr-34-nBj" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MpH-XF-AqQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1678" y="814"/>
+            <point key="canvasLocation" x="1626" y="34"/>
         </scene>
     </scenes>
     <resources>
@@ -773,4 +774,7 @@
         <image name="Wallet" width="25" height="26"/>
         <image name="jonAlways" width="94" height="94"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="fyv-EH-KG9"/>
+    </inferredMetricsTieBreakers>
 </document>
